# Nova-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  run-web.sh  run.ps1  run.sh  start-tunnel.ps1
config/: config.yaml  settings.py
frontend/: .env.example  Dockerfile.frontend  bunfig.toml  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-footer.tsx  app-shell.tsx  password-strength.tsx
frontend/electron/: main.cjs  preload.cjs
frontend/hooks/: use-gps-location.ts
frontend/lib/: camera-overlay.ts  chat-messages-persist.ts  chat-messages-store.ts  gaaia-api-base.ts  nova-api-base.ts  suggestion-actions.ts
frontend/scripts/: canonicalize-tailwind.mjs
gaaia/: attachments.py  bootstrap.py
gaaia/agent/: agents.py  orchestrator.py  personality.py  tool_registry.py  workflow.py
gaaia/engines/: communication.py  dev.py  media.py  research.py  video_analyzer.py
gaaia/memory/: context_builder.py  models.py  store.py
gaaia/server/: auth_utils.py  dependencies.py  main.py  schemas.py  security.py
gaaia/services/: body_detector.py  camera_buffer.py  camera_vision.py  chart_generator.py  detection_stabilizer.py  document_generator.py  embedding_service.py  face_identity.py  file_processor.py  frame_detection.py  hand_tracker.py  hardware.py  image_decode.py  image_generator.py  knowledge_feed.py  location.py  mediapipe_runtime.py  mmpose_tracker.py  model_client.py  model_router.py  music_generator.py  prompt_enhancer.py  resend_service.py  resource_advisor.py  speaker_identity.py  stats_tracker.py  stripe_service.py  totp_service.py  video_camera.py  voice_personalization.py  web_watcher.py
gaaia/tools/: clipboard.py  notes.py  screenshot.py  weather.py
gaaia/voice/: audio_io.py  hotkey.py  pipeline.py  speaker_focus.py  tts.py
nova/: attachments.py  bootstrap.py
nova/agent/: orchestrator.py  personality.py  tool_registry.py
nova/approval/: manager.py
nova/desktop/: app.py  tray.py
nova/engines/: communication.py  dev.py  media.py  research.py  video_analyzer.py
nova/memory/: context_builder.py  models.py  store.py
nova/server/: auth_utils.py  dependencies.py  main.py  schemas.py  security.py
nova/services/: body_detector.py  camera_buffer.py  camera_context_lines.py  camera_vision.py  chart_gen_service.py  detection_geometry.py  document_generator.py  face_identity.py  frame_detection.py  hand_tracker.py  image_generator.py  knowledge_feed.py  mediapipe_resources.py  (+11 more)
scripts/: ensure_models.py  init_db.sql  list_pullable_models.py  run_desktop.py  run_local_app.py  run_server_only.py  setup.sh  test_conversation.py  test_day2.py  test_day6.py  test_e2e.py  test_memory.py  test_tools.py  test_voice.py
(+160 files in other folders)
